--- a/locales/de.po
+++ b/locales/de.po
@@ -1,24 +1,34 @@
 msgid ""
 msgstr ""
-"POT-Creation-Date: 2015-04-06 07:04:+0000\n"
 "Project-Id-Version: Translation Test\n"
+"POT-Creation-Date: 2015-04-07 08:34:+0000\n"
+"PO-Revision-Date: 2015-04-07 21:36-0000\n"
+"Last-Translator: Anthony Hastings <ar.hastings@gmail.com>\n"
 "Language-Team: \n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2015-04-06 22:43-0000\n"
-"Last-Translator: Anthony Hastings <ar.hastings@gmail.com>\n"
 "X-Generator: Poedit 1.5.4\n"
-"Language: de\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: js/src/main.js:46
+#: js/src/main.js:75
 msgid "Hello world."
 msgstr "Hallo Welt."
 
-#: js/src/main.js:53
+#: js/src/main.js:90 js/src/test.hbs:8
 msgid "You have %1$d new message."
 msgid_plural "You have %1$d new messages."
 msgstr[0] "Sie haben %1$d neue Nachricht."
 msgstr[1] "Sie haben %1$d neue Nachrichten."
+
+#: js/src/test.hbs:2
+msgid "A simple string."
+msgstr "Eine einfache Zeichenkette."
+
+#: js/src/test.hbs:5
+msgid "There is a person."
+msgid_plural "There are people."
+msgstr[0] "Es ist eine Person."
+msgstr[1] "Es gibt Menschen."
