--- a/locales/fr.json
+++ b/locales/fr.json
@@ -13,6 +13,13 @@
          "You have %1$d new message.": [
             "Vous avez %1$d nouveau message.",
             "Vous avez %1$d nouveaux messages."
+         ],
+         "A simple string.": [
+            "Une chaîne simple."
+         ],
+         "There is a person.": [
+            "Il est une personne.",
+            "Il y a des gens."
          ]
       }
    }
