--- a/locales/fr.po
+++ b/locales/fr.po
@@ -1,24 +1,34 @@
 msgid ""
 msgstr ""
-"POT-Creation-Date: 2015-04-06 07:04:+0000\n"
 "Project-Id-Version: Translation Test\n"
+"POT-Creation-Date: 2015-04-07 08:34:+0000\n"
+"PO-Revision-Date: 2015-04-07 21:37-0000\n"
+"Last-Translator: Anthony Hastings <ar.hastings@gmail.com>\n"
 "Language-Team: \n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2015-04-06 20:08-0000\n"
-"Last-Translator: Anthony Hastings <ar.hastings@gmail.com>\n"
 "X-Generator: Poedit 1.5.4\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"Language: fr\n"
 
-#: js/src/main.js:46
+#: js/src/main.js:75
 msgid "Hello world."
 msgstr "Bonjour le monde."
 
-#: js/src/main.js:53
+#: js/src/main.js:90 js/src/test.hbs:8
 msgid "You have %1$d new message."
 msgid_plural "You have %1$d new messages."
 msgstr[0] "Vous avez %1$d nouveau message."
 msgstr[1] "Vous avez %1$d nouveaux messages."
+
+#: js/src/test.hbs:2
+msgid "A simple string."
+msgstr "Une chaîne simple."
+
+#: js/src/test.hbs:5
+msgid "There is a person."
+msgid_plural "There are people."
+msgstr[0] "Il est une personne."
+msgstr[1] "Il y a des gens."
