--- a/locales/pl.po
+++ b/locales/pl.po
@@ -1,26 +1,37 @@
 msgid ""
 msgstr ""
-"POT-Creation-Date: 2015-04-06 07:04:+0000\n"
 "Project-Id-Version: Translation Test\n"
+"POT-Creation-Date: 2015-04-07 08:34:+0000\n"
+"PO-Revision-Date: 2015-04-09 20:25-0000\n"
+"Last-Translator: Anthony Hastings <ar.hastings@gmail.com>\n"
 "Language-Team: \n"
+"Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2015-04-09 12:50-0000\n"
-"Last-Translator: Anthony Hastings <anthony@rehabstudio.com>\n"
 "X-Generator: Poedit 1.5.4\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"Language: pl\n"
 
-#: js/src/main.js:46
+#: js/src/main.js:75
 msgid "Hello world."
 msgstr "Witaj świecie."
 
-#: js/src/main.js:53
+#: js/src/main.js:90 js/src/test.hbs:8
 msgid "You have %1$d new message."
 msgid_plural "You have %1$d new messages."
 msgstr[0] "Masz %1$d nową wiadomość."
 msgstr[1] "Masz %1$d nowe wiadomości."
 msgstr[2] "Masz %1$d nowych wiadomości."
+
+#: js/src/test.hbs:2
+msgid "A simple string."
+msgstr "Prosty łańcuch."
+
+#: js/src/test.hbs:5
+msgid "There is a person."
+msgid_plural "There are people."
+msgstr[0] "Jest osobą."
+msgstr[1] "Są ludzie."
+msgstr[2] "Są ludzie."
