--- a/locales/pl.json
+++ b/locales/pl.json
@@ -22,6 +22,12 @@
             "Jest osobą.",
             "Są ludzie.",
             "Są ludzie."
+         ],
+         "actions\u0004OK": [
+            "OK (Action)"
+         ],
+         "statements\u0004OK": [
+            "OK (Statement)"
          ]
       }
    }
