--- a/locales/pl.po
+++ b/locales/pl.po
@@ -1,24 +1,24 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Translation Test\n"
-"POT-Creation-Date: 2015-04-07 08:34:+0000\n"
-"PO-Revision-Date: 2015-04-09 20:25-0000\n"
-"Last-Translator: Anthony Hastings <ar.hastings@gmail.com>\n"
+"POT-Creation-Date: 2015-10-30 12:44:+0000\n"
+"PO-Revision-Date: 2015-10-30 12:48-0000\n"
+"Last-Translator: Anthony Hastings <anthony@rehabstudio.com>\n"
 "Language-Team: \n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.4\n"
+"X-Generator: Poedit 1.7.5\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
-#: js/src/main.js:75
+#: js/src/main.js:79
 msgid "Hello world."
 msgstr "Witaj świecie."
 
-#: js/src/main.js:90 js/src/test.hbs:8
+#: js/src/main.js:94 js/src/test.hbs:8
 msgid "You have %1$d new message."
 msgid_plural "You have %1$d new messages."
 msgstr[0] "Masz %1$d nową wiadomość."
@@ -35,3 +35,13 @@ msgid_plural "There are people."
 msgstr[0] "Jest osobą."
 msgstr[1] "Są ludzie."
 msgstr[2] "Są ludzie."
+
+#: js/src/main.js:123
+msgctxt "actions"
+msgid "OK"
+msgstr "OK (Action)"
+
+#: js/src/main.js:124
+msgctxt "statements"
+msgid "OK"
+msgstr "OK (Statement)"
